<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IdCard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="discover_peers_button">发现</string>
	<string name="connect_peer_button">连接</string>
	<string name="disconnect_peer_button">断开连接</string>
	<string name="get_file_button">打开相册</string>
	<string name="empty"/>
	<string name="yes">是</string>
	<string name="no">否</string>
	<string name="client_text">该设备为客户端，请点击打开相册按钮进行文件选择</string>
	<string name="empty_message">当前没有可用的对等方，请点击搜索按键</string>
	<string name="p2p_off_warning">请设置wifi可用</string>
	<string name="group_owner_text">"我是否为组拥有者"</string>
	<string name="label_me">我的信息</string>
	<string name="label_peers">附件好友</string>
	<string name="create_group">创建组</string>
	<string name="input_account">请输入账号</string>
	<string name="input_name">请输入姓名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_address">请输入地址</string>
    <string name="input_contact">请输入联系方式</string>
    <string name="input_fax">请输入传真</string>
    <string name="input_email">请输入邮箱地址</string>
    <string name="input_number">请输入固话号码</string>
    <string name="logining">登录</string>
    <string name="confirm">确认</string>
    <string name="change">修改</string>
     <string name="forget_password">忘记密码？</string>
     <string name="new_register">注册新用户</string>
     <string name="welcome">WELCOME</string>
     <string name="_return">返回</string>
      <string name="forget_password_">忘记密码</string>
      <string name="register">注册</string>
      <string name="friend_card">好友名片</string>
      <string name="user_name">林欢欢</string>
      <string name="Company_Name">福建闽侯上街65%</string>
      <string name="all_select">全选</string>
      <string name="all_send">群发</string>
      <string name="send">发送</string>
      <string name="key_send">发送名片</string>
      <string name="key_send_card">一键传片</string>
      <string name="card_store">名片商城</string>
      <string name="change_theme">主题更换</string>
      <string name="account_manage">账号管理</string>
      <string name="alter_password">修改密码</string>
      <string name="quit_login">退出登录</string>
       <string name="old_password">原有密码：</string>
       <string name="forget_pwd">忘记密码</string>
       <string name="new_password">修改后的密码：</string>
       <string name="again_password">请再次输入密码：</string>
       <string name="using">使用情况</string>
       <string name="character">个性装扮</string>
       <string name="residue_card">剩余卡片：</string>
       <string name="send_card">已发卡片：</string>
       <string name="receive_card">已收卡片：</string>
       <string name="number">1000</string>
       <string name="model">模板</string>
       <string name="purchase_card">购买名片</string>
       <string name="mycard">我的名片</string>
       <string name="contact">联系方式:</string>
       <string name="post">*职 位：</string>
       <string name="company_name">公司名：</string>
       <string name="company_name_edit">*公司名：</string>
       <string name="card_edit">名片编辑</string>
       <string name="sava">保存</string>
       <string name="remind">15字以内</string>
       <string name="remind_2">5字以内</string>
       <string name="company_resume">公司简介</string>
       <string name="text_resume">文字简介：</string>
        <string name="mymodel">已有模板</string>
        <string name="modelsee">模板预览</string>
        <string name="modelstore">模板商城</string>
         <string name="change_model">更换</string>
         <string name="download_model">下载</string>
</resources>
