<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forget_password"
    android:orientation="vertical" >

    <Button
        android:id="@+id/cardedit_back"
        android:layout_width="wrap_content"
       	android:layout_height="35dp"
       	android:layout_marginLeft="5dp"
       	android:layout_marginTop="3dp"
       	android:text="@string/_return"
       	android:background="#00FFFFFF"
       	android:textColor="#FFFFFF"
       	android:textSize="20sp" />
    <TextView
        android:id="@+id/card_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cardedit_back"
        android:layout_alignBottom="@+id/cardedit_back"
        android:layout_alignRight="@+id/save"
        android:background="#00FFFFFF"
        android:text="@string/card_edit"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/company_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/remind"
        android:layout_alignLeft="@+id/imageView1"
        android:text="@string/company_name_edit"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/remind"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@+id/input_name"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/company_name_edit"
        android:background="@drawable/rectangle5"
        android:ems="10"
        android:hint="@string/remind" />

     <EditText
         android:id="@+id/remind_2"
         android:layout_width="150dp"
         android:layout_height="30dp"
         android:layout_alignBottom="@+id/post"
         android:layout_toRightOf="@+id/company_name_edit"
         android:background="@drawable/rectangle5"
         android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="@string/remind_2" />

     <TextView
         android:id="@+id/post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/company_name_edit"
         android:layout_below="@+id/company_name_edit"
         android:layout_marginTop="10dp"
         android:text="@string/post"
         android:textScaleX="1.3"
         android:textSize="20sp" />

     <TextView
         android:id="@+id/contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/post"
         android:layout_below="@+id/remind_2"
         android:text="@string/contact"
         android:textSize="20sp" />

	<TextView
	    android:id="@+id/address"
	    android:layout_width="200dp"
	    android:layout_height="30dp"
	    android:layout_below="@+id/contact"
	    android:layout_toRightOf="@+id/address_picture"
	    android:background="@drawable/rectangle5"
	    android:ems="10"
	    android:gravity="center"
	    android:hint="@string/input_address"
	    android:textSize="20sp" />

	<Button
	    android:id="@+id/address_picture"
	    android:layout_width="20dp"
	    android:layout_height="25dp"
	    android:layout_alignLeft="@+id/company_name_edit"
	    android:layout_below="@+id/contact"
	    android:background="@drawable/address"/>

	<TextView
	    android:id="@+id/input_phone"
	    android:layout_width="130dp"
	    android:layout_height="30dp"
	    android:layout_marginTop="5dp"
	    android:layout_alignLeft="@+id/address"
	    android:layout_alignRight="@+id/address"
	    android:layout_below="@+id/address"
	    android:background="@drawable/rectangle5"
	    android:ems="10"
	    android:gravity="center"
	    android:hint="@string/input_contact"
	    android:textSize="20sp" />

	<Button
	    android:id="@+id/phone"
	    android:layout_width="20dp"
	    android:layout_height="25dp"
	    android:layout_alignBottom="@+id/input_phone"
	    android:layout_alignLeft="@+id/contact"
	    android:background="@drawable/phone" />

	<Button
	    android:id="@+id/save"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="20dp"
	    android:background="@drawable/rectangle4"
	    android:text="@string/sava"
	    android:textColor="#FFFFFF"
	    android:textSize="20sp" />

	<ImageView
	    android:id="@+id/imageView1"
	    android:layout_width="60dp"
	    android:layout_height="60dp"
	    android:layout_below="@+id/cardedit_back"
	    android:layout_marginTop="20dp"
	    android:layout_toLeftOf="@+id/save"
	    android:background="@drawable/circle" />

	<TextView
	    android:id="@+id/input_fax"
	    android:layout_width="150dp"
	    android:layout_height="30dp"
	    android:layout_alignRight="@+id/input_phone"
	    android:layout_alignTop="@+id/fax"
	    android:layout_toRightOf="@+id/phone"
	     android:layout_marginTop="5dp"
	    android:background="@drawable/rectangle5"
	    android:ems="10"
	    android:gravity="center"
	    android:hint="@string/input_fax"
	    android:textSize="20sp" />

	<TextView
	    android:id="@+id/input_email"
	    android:layout_width="150dp"
	    android:layout_height="30dp"
	    android:layout_alignRight="@+id/input_fax"
	    android:layout_below="@+id/fax"
	    android:layout_marginTop="5dp"
	    android:layout_toRightOf="@+id/cardedit_back"
	    android:background="@drawable/rectangle5"
	    android:ems="10"
	    android:gravity="center"
	    android:hint="@string/input_email"
	    android:textSize="20sp" />
	<Button
	    android:id="@+id/fax"
	    android:layout_width="20dp"
	    android:layout_height="35dp"
	    android:layout_below="@+id/phone"
	    android:layout_toLeftOf="@+id/input_email"
	    android:background="@drawable/fax" />

	<Button
	    android:id="@+id/mail"
	    android:layout_width="20dp"
	    android:layout_height="25dp"
	    android:layout_alignLeft="@+id/fax"
	    android:layout_alignTop="@+id/input_email"
	    android:background="@drawable/mail" />

	<EditText
	    android:id="@+id/input_name"
	    android:layout_width="150dp"
	    android:layout_height="30dp"
	    android:layout_alignBottom="@+id/imageView1"
	    android:layout_toRightOf="@+id/company_name_edit"
	    android:background="@drawable/rectangle5"
	    android:ems="10"
	    android:hint="@string/input_name" />

	<Button
	    android:id="@+id/addcompany"
	    android:layout_width="30dp"
	    android:layout_height="20dp"
	    android:layout_alignBottom="@+id/mail"
	    android:layout_alignRight="@+id/remind_2"
	    android:background="@drawable/add" />

</RelativeLayout>
