<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    tools:context=".MainActivity" >
    <EditText
        android:id="@+id/mima"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/zhanghao"
        android:layout_below="@+id/zhanghao"
        android:layout_marginTop="34dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:hint="@string/input_account"
        android:inputType="textPassword" />

<Button
    android:id="@+id/login"
    android:layout_width="150dp"
    android:layout_height="45dp"
    android:layout_below="@+id/mima"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="33dp"
    android:background="@drawable/rectangle2"
    android:text="@string/logining"
    android:textColor="#FFFFFF" />

 <View
     android:id="@+id/line"
     android:layout_width="72dip"
     android:layout_height="2dip"
     android:layout_alignBottom="@+id/forget"
     android:layout_alignLeft="@+id/forget"
     android:background="#89FFFFFF" />

 <TextView
     android:id="@+id/forget"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignRight="@+id/mima"
     android:layout_below="@+id/mima"
     android:text="@string/forget_password"
     android:textColor="#FFFFFF"
     android:textSize="15sp" />

 <View
     android:id="@+id/line2"
     android:layout_width="75dip"
     android:layout_height="2dip"
     android:layout_alignBottom="@+id/register"
     android:layout_alignLeft="@+id/register"
     android:background="#89FFFFFF" />

 <TextView
     android:id="@+id/register"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/login"
     android:layout_centerHorizontal="true"
     android:text="@string/new_register"
     android:textColor="#FFFFFF"
     android:textSize="15sp" />

 <EditText
     android:id="@+id/zhanghao"
     android:layout_width="250dp"
     android:layout_height="45dp"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="126dp"
     android:background="@drawable/rectangle"
     android:ems="10"
     android:hint="@string/input_password" />

 <TextView
     android:id="@+id/welcome"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignBottom="@+id/zhanghao"
     android:layout_centerHorizontal="true"
     android:layout_marginBottom="75dp"
     android:text="@string/welcome"
     android:textColor="#FFFFFF"
     android:textSize="26sp" />

</RelativeLayout>