<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
     <RelativeLayout 
   		    android:layout_width="match_parent"
       		android:layout_height="match_parent"
       		android:background="@drawable/forget_password">
       		<Button
       	    android:id="@+id/key_return"
       	    android:layout_width="wrap_content"
       	    android:layout_height="35dp"
       	    android:layout_marginLeft="5dp"
       	    android:layout_marginTop="3dp"
       	    android:text="@string/_return"
       	    android:background="#00FFFFFF"
       	    android:textColor="#FFFFFF"
       	    android:textSize="20sp" />
       		<TextView
	    	android:id="@+id/alter_password"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignBaseline="@+id/key_return"
	    	android:layout_alignBottom="@+id/key_return"
	    	android:layout_centerHorizontal="true"
	    	android:text="@string/alter_password"
	    	android:textColor="#FFFFFF"
	    	android:textSize="20sp" />
       		
       		<TextView
       		    android:id="@+id/new_password"
       		    android:layout_width="wrap_content"
       		    android:layout_height="wrap_content"
       		    android:layout_above="@+id/new_password_input"
       		    android:layout_alignLeft="@+id/new_password_input"
       		    android:text="@string/new_password"
       		    android:textColor="#000000"
       		    android:textSize="20sp" />
			<EditText
       		    android:id="@+id/new_password_input"
       		    android:layout_width="250dp"
       		    android:layout_height="45dp"
       		    android:layout_centerHorizontal="true"
       		    android:layout_centerVertical="true"
       		    android:background="@drawable/rectangle5"
       		    android:ems="10" >
       		    <requestFocus />
       		</EditText>

			<TextView
			    android:id="@+id/old_password"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_above="@+id/old_password_input"
			    android:layout_alignLeft="@+id/old_password_input"
			    android:text="@string/old_password"
			    android:textColor="#000000"
			    android:textSize="20sp" />
			<EditText
			    android:id="@+id/old_password_input"
			    android:layout_width="250dp"
			    android:layout_height="45dp"
			    android:layout_above="@+id/new_password"
			    android:layout_alignLeft="@+id/new_password"
			    android:layout_marginBottom="15dp"
			    android:background="@drawable/rectangle5"
			    android:ems="10" />

			<TextView
			    android:id="@+id/again_password"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignLeft="@+id/new_password_input"
			    android:layout_below="@+id/new_password_input"
			    android:layout_marginTop="14dp"
			    android:text="@string/again_password"
			    android:textColor="#000000"
			    android:textSize="20sp" />

			<EditText
			    android:id="@+id/again_password_input"
			    android:layout_width="250dp"
			    android:layout_height="45dp"
			    android:layout_alignLeft="@+id/again_password"
			    android:layout_below="@+id/again_password"
			    android:background="@drawable/rectangle5"
			    android:ems="10" />

			<Button
			    android:id="@+id/confirm"
			    android:layout_width="100dp"
			    android:layout_height="45dp"
			    android:layout_alignParentBottom="true"
			    android:layout_centerHorizontal="true"
			    android:layout_marginBottom="39dp"
			    android:background="@drawable/rectangle4"
			    android:text="@string/confirm"
			    android:textSize="20sp"
			    android:textColor="#FFFFFF" />

	</RelativeLayout>
</LinearLayout>
