<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
   android:background="@drawable/forget_password"
    android:layout_height="match_parent" >
    <Button
        android:id="@+id/company_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/circle"
        android:text="logo" />
    <TextView
        android:id="@+id/my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/company_logo"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        android:text="名字" />

    <TextView
        android:id="@+id/my_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/company_logo"
        android:layout_alignLeft="@+id/my_name"
        android:textSize="22sp"
        android:text="职位" />

   <EditText
       android:id="@+id/editText1"
       android:layout_width="wrap_content"
       android:layout_height="30dp"
       android:layout_alignLeft="@+id/input_mailbox"
       android:layout_alignTop="@+id/contact_way"
       android:background="@drawable/rectangle5"
       android:ems="10" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/phone"
        android:layout_toRightOf="@+id/phone"
        android:background="@drawable/rectangle5"
        android:ems="10" />
<TextView
    android:id="@+id/companyname"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/company_logo"
    android:layout_below="@+id/company_logo"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="10dp"
    android:text="@string/company_name"
    android:textSize="22sp" />
<Button
    android:id="@+id/change"
    android:layout_width="100dp"
    android:layout_height="45dp"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="19dp"
    android:layout_toRightOf="@+id/company_logo"
    android:background="@drawable/rectangle4"
    android:text="@string/change"
    android:textColor="#FFFFFF"
    android:textSize="20sp" />

<TextView
    android:id="@+id/friend_card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/friendcard_back"
    android:layout_alignBottom="@+id/friendcard_back"
    android:layout_centerHorizontal="true"
    android:text="@string/friend_card"
    android:textColor="#FFFFFF"
    android:textSize="20sp" />

<Button
    android:id="@+id/friendcard_back"
    android:layout_width="wrap_content"
    android:layout_height="35dp"
    android:layout_alignParentTop="true"
    android:layout_toLeftOf="@+id/phone"
    android:background="#00FFFFFF"
    android:text="@string/_return"
    android:textColor="#FFFFFF"
    android:textSize="20sp" />

<Button
    android:id="@+id/button_send"
    android:layout_width="wrap_content"
    android:layout_height="35dp"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:background="#00FFFFFF"
    android:text="@string/send"
    android:textColor="#FFFFFF"
    android:textSize="20sp" />

<TextView
    android:id="@+id/companyname1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/mailbox"
    android:layout_toRightOf="@+id/companyname"
    android:text="@string/Company_Name"
    android:textSize="20sp" />

<Button
    android:id="@+id/mailbox"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_alignLeft="@+id/companyname"
    android:layout_below="@+id/companyname"
    android:layout_marginTop="90dp"
    android:background="@drawable/phone_number"
    android:textSize="22sp" />

<EditText
    android:id="@+id/input_mailbox"
    android:layout_width="wrap_content"
    android:layout_height="30dp"
    android:layout_alignBaseline="@+id/mailbox"
    android:layout_alignBottom="@+id/mailbox"
    android:layout_alignRight="@+id/companyname1"
    android:background="@drawable/rectangle5"
    android:ems="10" >

    <requestFocus />
</EditText>

<Button
    android:id="@+id/phone"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_alignLeft="@+id/companyname"
    android:layout_centerVertical="true"
    android:background="@drawable/phone" />

<Button
    android:id="@+id/contact_way"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_below="@+id/input_mailbox"
    android:layout_marginTop="24dp"
    android:layout_toRightOf="@+id/friendcard_back"
    android:background="@drawable/fax" />

<TextView
    android:id="@+id/mycontact"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/companyname"
    android:layout_below="@+id/companyname"
    android:text="@string/contact"
    android:textSize="22sp" />

</RelativeLayout>
